--- a/linkedin-scheduler-extension/manifest.json
+++ b/linkedin-scheduler-extension/manifest.json
@@ -8,7 +8,8 @@
     "tabs",
     "notifications",
     "scripting",
-    "activeTab"
+    "activeTab",
+    "alarms"
   ],
   "host_permissions": [
     "https://*.linkedin.com/*",
